no longer overflowing the digest

--- a/moo/www/css/style.css
+++ b/moo/www/css/style.css
@@ -35,6 +35,11 @@
     color: white;
 }
 
+.threads.avatar{
+  margin-right: 5px;
+  float: left;
+}
+
 
 
 
